2006-09-23  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmflexiserver.c: Add g_type_init() since this is needed
	  for -a (authentication) code to work.

2006-09-22  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf.in, daemon/filecheck.c, daemon/gdm.h
	  daemon/gdmconfig.c, docs/C/gdm.xml: Now gdm.conf has
 	  SupportAutomount option which, when turned on, changes
	  the way that GDM accessess the user's $HOME/.dmrc file
	  so that automounted $HOME directories can be configured
	  to work even with the automounter isn't started with
	  the --ghost option.  This feature is off by default.
	  This addresses RFE bug #356869.  Patch by 
	  Jerzy Borkowski <jubork@ncac.torun.pl>.

2006-09-11  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Move call to get GDM_KEY_SYSTEM_MENU
	  until after authentication check.  Fixes bug
	  #352838.  Patch by Frederic Crozat
	  <fcrozat@mandriva.com>.
	* docs/C/gdm.xml: Make gdmdynamic section a bit more
	  clear.

2006-09-04  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.16.0:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-09-04  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml, docs/es/gdm.xml, docs/uk/gdm.xml:
	  Accidently putback docs fix after freeze.  Backing
	  out.

2006-09-04  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.16.0:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-08-23  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Make the SDTLOGIN logic a bit smarter and
	  use g_unlink() instead of unlink().

2006-08-23  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.h: Corrections to comments.

2006-08-21  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.10:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Fix intltool req.
	* po/nb.po: Update this.
