@@ -108,7 +108,7 @@ gdm_verify_user (GdmDisplay *d,
     gint reEnter, ret;
 #endif
 
-    if (local)
+    if (local && d->timed_login_ok)
 	    gdm_slave_greeter_ctl_no_ret (GDM_STARTTIMER, "");
 
     if (username == NULL) {
